# packed

./: .clang-format  .clang-tidy  CMakeLists.txt  cmake-kits.json  fconv.hpp  fft.hpp  fxcorr.hpp  mdstorage.hpp  mdvector.hpp  static_mdstorage.hpp  vector.hpp  vector_arithm.hpp  vector_util.hpp
inc/: allocators.hpp  apply_for_each.hpp  element_access.hpp  meta.hpp  simd_common.hpp  simd_fft.hpp  simd_fft_generalized.hpp  tuple_util.hpp  types.hpp  vector_arithm.hpp  vector_util.hpp
inc/simd_impl/: avx2.hpp  avx2_common.hpp  avx2_fft.hpp  avx512_common.hpp  simd_base.hpp  simd_common.hpp  simd_fft.hpp
tests/: test_avx512.cpp  test_fconv.cpp  test_fft.cpp  test_fxcorr.cpp  test_generalized.cpp  test_mdstorage.cpp  test_mdvector.cpp  test_op.cpp  test_pcx.hpp  test_vector.cpp
